更新查询变量
更新全部查询变量

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 
 .DS_Store
+.prefs
+.classpath
+.project
+.class
+*.class
+*.prefs
+target/classes/application.properties
+target/classes/META-INF/maven/cn.springsongs/song/pom.properties
+target/classes/META-INF/maven/cn.springsongs/song/pom.xml
