调整代码架构

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,13 @@ web.upload.path=/Users/jackchen/documents/upload/
 systemCode=Base
 spring.servlet.multipart.max-file-size=100000000
 spring.servlet.multipart.max-request-size=100000000
+
+spring.quartz.job-store-type=jdbc
+#spring.quartz.jdbc.initialize-schema=always
+spring.quartz.properties.org.quartz.scheduler.instanceName=clusteredScheduler
+spring.quartz.properties.org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+spring.quartz.properties.org.quartz.jobStore.tablePrefix=QRTZ_
+spring.quartz.properties.org.quartz.jobStore.isClustered=true
+spring.quartz.properties.org.quartz.jobStore.clusterCheckinInterval=10000
+spring.quartz.properties.org.quartz.jobStore.useProperties=false
