--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8090
 server.servlet.session.timeout=1000
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/base_system?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/base_system?allowMultiQueries=true&nullCatalogMeansCurrent=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=qweasd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -23,3 +23,8 @@ spring.quartz.properties.org.quartz.jobStore.tablePrefix=QRTZ_
 spring.quartz.properties.org.quartz.jobStore.isClustered=true
 spring.quartz.properties.org.quartz.jobStore.clusterCheckinInterval=10000
 spring.quartz.properties.org.quartz.jobStore.useProperties=false
+
+
+#spring.activiti.database-schema-update=true
+spring.activiti.history-level=full
+spring.activiti.check-process-definitions=false
