修改权限较验
修改权限较验

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,4 @@ spring.quartz.properties.org.quartz.jobStore.useProperties=false
 #spring.activiti.database-schema-update=true
 spring.activiti.history-level=full
 spring.activiti.check-process-definitions=false
+#spring.activiti.db-identity-used=false
