--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,4 @@ spring.quartz.properties.org.quartz.jobStore.useProperties=false
 spring.activiti.history-level=full
 spring.activiti.check-process-definitions=false
 #spring.activiti.db-identity-used=false
+security.basic.enabled=false
