--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,12 @@ spring.main.allow-bean-definition-overriding=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=validate
 spring.jpa.show-sql=true
 
+spring.datasource.druid.stat-view-servlet.enabled=true
+spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
+spring.datasource.druid.stat-view-servlet.reset-enable=true
+spring.datasource.druid.stat-view-servlet.login-username=admin
+spring.datasource.druid.stat-view-servlet.login-password=admin
+
 web.upload.path=/Users/jackchen/documents/upload/
 systemCode=Base
 spring.servlet.multipart.max-file-size=100000000
@@ -30,3 +36,16 @@ spring.activiti.history-level=full
 spring.activiti.check-process-definitions=false
 #spring.activiti.db-identity-used=false
 security.basic.enabled=false
+
+
+swagger.title=springsongs system api
+swagger.description=Starter for swagger 2.x
+swagger.version=1.9.0.RELEASE
+swagger.license=Apache License, Version 2.0
+swagger.licenseUrl=https://www.apache.org/licenses/LICENSE-2.0.html
+swagger.termsOfServiceUrl=https://github.com/dyc87112/spring-boot-starter-swagger
+swagger.contact.name=springsongs
+swagger.contact.url=http://blog.springsongs.cn
+swagger.contact.email=springsongs@aliyun.com
+swagger.base-package=io.github.springsongs
+swagger.base-path=/**
