--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/base_system?allowMultiQueries=
 spring.datasource.username=root
 spring.datasource.password=qweasd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
 spring.main.allow-bean-definition-overriding=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=validate
 spring.jpa.show-sql=true
@@ -14,6 +16,9 @@ spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
 spring.datasource.druid.stat-view-servlet.reset-enable=true
 spring.datasource.druid.stat-view-servlet.login-username=admin
 spring.datasource.druid.stat-view-servlet.login-password=admin
+spring.datasource.druid.filters=config,stat,wall
+spring.datasource.druid.web-stat-filter.enabled=true
+spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*
 
 web.upload.path=/Users/jackchen/documents/upload/
 systemCode=Base
